###############################################################################
# Subdirectories
###############################################################################

add_subdirectory(lib)

###############################################################################
# Nodes
###############################################################################

add_executable(waiterbot_ar_pair_tracking_node main.cpp)
target_link_libraries(waiterbot_ar_pair_tracking_node waiterbot_ar_pair_tracking)

###############################################################################
# Install
###############################################################################
