###############################################################################
# Sources
###############################################################################

file(GLOB SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

###############################################################################
# Build
###############################################################################

add_library(waiterbot_ar_pair_tracking ${SOURCES})
target_link_libraries(waiterbot_ar_pair_tracking yaml-cpp ${catkin_LIBRARIES})

###############################################################################
# Install
###############################################################################
